--- a/lib/Makefile
+++ b/lib/Makefile
@@ -44,11 +44,12 @@ PHONESETS = mrpa_phones.scm mrpa_allophones.scm radio_phones.scm \
             cmusphinx2_phones.scm
 DURSTATS = mrpa_durs.scm klatt_durs.scm gswdurtreeZ.scm f2bdurtreeZ.scm
 INTSTATS = tobi.scm f2bf0lr.scm tobi_rules.scm \
-           tilt.scm
+           tilt.scm apml.scm apml_f2bf0lr.scm
 DBS = 
 LTSRULES = engmorph.scm engmorphsyn.scm lts.scm lts_build.scm
 BRKMODELS = sec.ts20.quad.ngrambin sec.B.hept.ngrambin
-MODES = email-mode.scm ogimarkup-mode.scm sable-mode.scm soleml-mode.scm
+MODES = email-mode.scm ogimarkup-mode.scm sable-mode.scm soleml-mode.scm \
+        singing-mode.scm
 GENERAL =  init.scm synthesis.scm module_description.scm \
           lexicons.scm \
 	  festival.scm intonation.scm duration.scm pos.scm phrase.scm \
@@ -57,7 +58,7 @@ GENERAL =  init.scm synthesis.scm module_description.scm \
           festtest.scm cslush.scm cart_aux.scm pauses.scm \
           scfg.scm mettree.scm java.scm clunits.scm clunits_build.scm
 OTHERS = Sable.v0_2.dtd sable-latin.ent festival.el scfg_wsj_wp20.gram \
-	speech.properties
+	speech.properties Singing.v0_1.dtd
 
 SIOD =  siod.scm web.scm cstr.scm fringe.scm
 
