config/config.in: Don't hard-code the EST path.
This change uses the ESTDIR environment variable to locate the
Edinburgh Speech Tools in config/config.in as this is the approach
used elsewhere in the festival projects.

--- a/config/config.in
+++ b/config/config.in
@@ -10,7 +10,7 @@
 ###########################################################################
 ## Which speech tools to use
 
-EST=$(TOP)/../speech_tools
+EST=$(ESTDIR)
 
 ###########################################################################
 ## Where the festival tree will be installed.
